[package]
name = "clapped"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "player",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
shlex = "1.3.0"
player = { path = "player" }